--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     background-color: hsl(0, 0%, 0%);
     color: hsl(0, 0%, 100%);
 
-    font-family: Candara, serif;
+    font-family: Candara, sans-serif;
     font-weight: 700;
 
     margin: 0;
@@ -32,7 +32,7 @@ a:active {
 h1,
 h2,
 h3 {
-    font-family: Cambria, sans-serif;
+    font-family: Cambria, serif;
     font-weight: 400;
     margin-top: 0;
 }
@@ -82,6 +82,7 @@ ul {
     font-size: 1.375rem;
     line-height: 1.5;
     margin-top: 0;
+    margin-bottom: 2rem;
 }
 
 ul {
@@ -102,6 +103,68 @@ li {
     }
 }
 
+section {
+    margin-bottom: 4rem;
+}
+
+@media (min-width: 960px) {
+    section {
+        margin-bottom: 6.25rem;
+    }
+}
+
+.overheading {
+    color: hsl(31, 100%, 92%);
+
+    font-family: Candara, sans-serif;
+    font-size: 1rem;
+    font-weight: 700;
+    line-height: 1.5;
+    letter-spacing: 0.375em;
+    text-transform: uppercase;
+
+    display: block;
+    
+    padding-block: 0.25rem;
+    padding-left: 1rem;
+    border-left: 2px solid currentColor; 
+    margin-bottom: 0.5rem;
+}
+
+@media (min-width: 960px) {
+    .overheading {
+        font-size: 1.375rem;
+        line-height: 1;
+        
+        display: flex;
+        align-items: center;
+        column-gap: 1rem;
+        
+        padding: 0;
+        border-left: none;
+        margin-bottom: 1.375rem;
+    }
+    
+    .overheading::before {
+        background-color: currentColor;
+        content: "";
+        height: 0.125rem;
+        flex: 0 0 4.5rem;
+    }
+}
+
+.overheading--h1 {
+    color: inherit;
+}
+
+@media (min-width: 960px) {
+    .overheading--h1 {
+        margin-bottom: 1.75rem;
+    }
+}
+
+/** Containers **/
+
 .container-body {
     background-size: 
         var(--bg-width) auto, 
@@ -118,37 +181,12 @@ li {
     margin: auto;
 }
 
-.container-header {
-    background-size: var(--bg-width) auto;
-    background-image: var(--bg-image),
-        linear-gradient(
-            hsl(26, 78%, 86%) 0px,
-            hsl(26, 78%, 86%) 100px,
-            hsl(28, 62%, 81%) 150px,
-            hsl(28, 62%, 81%) 175px,
-            hsl(35, 26%, 75%) 185px,
-            hsl(35, 26%, 75%) 215px,
-            hsl(60, 7%, 65%) 225px,
-            hsl(60, 7%, 65%) 330px,
-            hsl(126, 5%, 60%) 340px,
-            hsl(126, 5%, 60%) 400px,
-            hsl(152, 6%, 50%) 410px,
-            hsl(169, 10%, 31%) 600px
-        );
-    background-repeat: no-repeat;
-    background-position: right 0 top 0;
-
-    padding-top: 1rem;
-}
-
-.container-header,
 .container-body {
     --bg-width: 410px;
     --bg-image: url("images/bg-733w.webp");
 }
 
 @media (min-width: 410px) {
-    .container-header,
     .container-body {
         --bg-width: 1440px;
         --bg-image: url("images/bg-2575w.webp");
@@ -167,83 +205,58 @@ li {
     }
 }
 
-.overheading {
-    color: hsl(31, 100%, 92%);
-
-    font-family: Candara, sans-serif;
-    font-size: 1rem;
-    font-weight: 700;
-    line-height: 1.5;
-    letter-spacing: 0.375em;
-    text-transform: uppercase;
-
-    display: block;
-
-    padding-block: 0.25rem;
-    padding-left: 1rem;
-    border-left: 2px solid currentColor; 
-    margin-bottom: 0.5rem;
-}
-
-@media (min-width: 960px) {
-    .overheading {
-        font-size: 1.375rem;
-        line-height: 1;
-
-        display: flex;
-        align-items: center;
-        column-gap: 1rem;
-
-        padding: 0;
-        border-left: none;
-        margin-bottom: 1.375rem;
-    }
-
-    .overheading::before {
-        background-color: currentColor;
-        content: "";
-        height: 0.125rem;
-        flex: 0 0 4.5rem;
-    }
-}
-
-.main-section {
-    margin-bottom: 4rem;
-}
-
-@media (min-width: 960px) {
-    .main-section {
-        margin-bottom: 6.25rem;
-    }
-}
-
 /** Header **/
 
-.header-main {
+.header {
     color: hsl(0, 0%, 0%);
     margin-bottom: 4rem;
 }
 
 @media (min-width: 960px) {
-    .header-main {
+    .header {
         margin-bottom: 6.25rem;
     }
 }
 
-.header-overheading {
-    color: inherit;
+.header__container {
+    background-size: var(--bg-width) auto;
+    background-image: var(--bg-image),
+    linear-gradient(
+        hsl(26, 78%, 86%) 0px,
+        hsl(26, 78%, 86%) 100px,
+        hsl(28, 62%, 81%) 150px,
+        hsl(28, 62%, 81%) 175px,
+        hsl(35, 26%, 75%) 185px,
+        hsl(35, 26%, 75%) 215px,
+        hsl(60, 7%, 65%) 225px,
+        hsl(60, 7%, 65%) 330px,
+        hsl(126, 5%, 60%) 340px,
+        hsl(126, 5%, 60%) 400px,
+        hsl(152, 6%, 50%) 410px,
+        hsl(169, 10%, 31%) 600px
+        );
+    background-repeat: no-repeat;
+    background-position: right 0 top 0;
+    
+    padding-top: 1rem;
+}
+        
+.header__container {
+    --bg-width: 410px;
+    --bg-image: url("images/bg-733w.webp");
 }
 
-@media (min-width: 960px) {
-    .header-overheading {
-        margin-bottom: 1.75rem;
+@media (min-width: 410px) {
+    .header__container {
+        --bg-width: 1440px;
+        --bg-image: url("images/bg-2575w.webp");
     }
 }
 
-.header-text {
+.header__text {
     max-width: 29.125rem;
 }
-
+        
 /** Navigation **/
 
 .navigation {
@@ -258,9 +271,9 @@ li {
     }
 }
 
-.navigation a,
-.navigation a:link,
-.navigation a:visited {
+.navigation__link,
+.navigation__link:link,
+.navigation__link:visited {
     color: hsl(0, 0%, 0%);
 
     font-size: 1rem;
@@ -274,8 +287,8 @@ li {
     margin-left: 0.375rem;
 }
 
-.navigation a:hover,
-.navigation a:active {
+.navigation__link:hover,
+.navigation__link:active {
     color: hsl(180, 15%, 14%);
 }
 
@@ -284,9 +297,9 @@ li {
 .project {
     display: flex;
     flex-direction: column;
-
+    
     max-width: 36rem;
-
+    
     margin-top: 1.5rem;
     margin-bottom: 2.25rem;
 }
@@ -294,64 +307,66 @@ li {
 @media (min-width: 960px) {
     .project {
         max-width: initial;
-
+        
         display: flex;
-        flex-direction: row;
+        flex-direction: row-reverse;
         column-gap: 3rem;
-
+        
         margin-top: 2rem;
         margin-bottom: 4rem;
     }
-
+    
     .project:nth-child(odd) {
-        flex-direction: row-reverse;
+        flex-direction: row;
     }
 }
 
-.project img {
+.project__description {
+    display: contents;
+}
+
+@media (min-width: 960px) {
+    .project__description {
+        display: initial;
+        flex: 1 1 26rem;
+    }
+}
+
+.project__name {
+    order: -2;
+}
+
+.project__image-container {
+    order: -1;
+}
+
+.project__photo {
     display: block;
     max-width: 100%;
     height: auto;
     max-height: 90vh;
     object-fit: contain;
     object-position: 0;
-
     margin-bottom: 1.5rem;
 }
 
 @media (min-width: 960px) {
-    .project-img {
+    .project__photo {
         flex: 0 1 40.5rem;
         margin: 0;
     }
 }
 
 @media (min-width: 1280px) {
-    .project img {
+    .project__photo {
         margin: 0;
     }
 }
 
-.project-text {
-    display: contents;
-}
-
-
-@media (min-width: 960px) {
-    .project-text {
-        display: initial;
-        flex: 1 1 26rem;
-    }
-}
-
-.project-text p {
-    margin-bottom: 2rem;
-    order: 1;
-}
 
 /** Contacts **/
 
-.contacts-description {
+.contacts {
     display: flex;
     flex-wrap: wrap;
     column-gap: 1.5rem;
